# smc-electrolyte

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements-backend.txt
.venv_validate/: pyvenv.cfg
app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/: Dockerfile  data_processed  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  analysis.py  exposure.py  forecast.py  heatwave.py  incidents.py  realtime.py  smc.py
backend/app/core/: __init__.py  config.py
backend/tests/: test_admin.py  test_analysis_api.py  test_exposure_api.py  test_forecast_api.py  test_health.py  test_heatwave_api.py  test_smc_api.py
data_intermediate/: README.md  incident_audit_sample.csv
data_processed/: README.md  analysis_metrics.json  bd_admin_district.geojson  bd_admin_upazila.geojson  forecast_realtime.geojson  heatstroke_incidents.csv  heatstroke_incidents.geojson  heatwave_district_daily.geojson  heatwave_district_weekly.geojson  heatwave_realtime_daily.geojson  hotspots_next7days.geojson  pop_density.tfw  pop_density.tif  pop_density_district.geojson  smc_priority_index.csv  smc_priority_map.geojson  smc_priority_meta.json  top_20_upazilas.csv  validation_summary.json
data_raw/: README.md  news_config.json
docs/: admin_codes.md  analysis_summary.md  architecture.md  data_dictionary.md  exposure_methodology.md  heatwave_definition.md  methodology.md  model_card.md  news_pipeline.md  smc_priority_methodology.md  temperature_sources.md  validation_report.md
frontend/: Dockerfile  next-env.d.ts  package.json  (+4 more)
(+137 files in other folders)
