[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smc-backend"
version = "0.1.0"
description = "SMC heatwave risk backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pandas>=2.2.2",
  "pyarrow>=17.0.0",
  "geopandas>=1.0.1",
  "rasterio>=1.4.0",
  "xarray>=2024.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
